Fix the icon color on dark mode

--- a/src/component/Drawer.scss
+++ b/src/component/Drawer.scss
@@ -55,6 +55,7 @@
     height: 24px;
     content: ' ';
     background: url('../image/icon/#{$icon}.svg') no-repeat center center;
+    filter: invert(var(--icon-invert));
   }
 
   &.open {
